Fix navigation rendering issue on Firefox

--- a/content/assets/style/_layout.scss
+++ b/content/assets/style/_layout.scss
@@ -237,6 +237,7 @@ body header {
 
                 li a {
                     font-size: 15px;
+                    margin: 0;
                 }
 
                 li.home {
