--- a/content/assets/style/screen.scss
+++ b/content/assets/style/screen.scss
@@ -1,5 +1,5 @@
 ---
-version:    29
+version:    30
 is_hidden:  true
 is_dynamic: true
 ---
